Sun Aug 07 18:20:24 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * stop insult plugin being used to insult the bot

Sun Aug 07 17:53:06 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * workaround for people without YAML::load_file
	* quit message for restart

Sun Aug 07 15:11:07 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * fix address_prefix, broken in 0.9.9, reported by ruskie.

Sat Aug 06 00:54:34 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Released 0.9.9

Fri Aug 05 23:55:20 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * few more tweaks preparing to release 0.9.9

Thu Aug 04 23:03:30 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Improved ircd recognition of rfc2812.rb
	* de-string'd, de-cap'd rfc2812.rb, looks less shouty now
	* moved the Q auth stuff (for quakenet) into a new qauth plugin (untested!)
	* finish fixing the httputil

Thu Aug 04 00:11:52 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Tweaked the debug() stuff a bit. Need to do this more cleanly really
	* Added a fair bit of documentation for some of the new features

Wed Aug 03 15:25:07 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Added french language file (TODO most of the plugins just talk english)
	* The way the Enum configs were set up, it wasn't possible to add language
	files to rbot at runtime (the directory was only scanned at startup). Now
	you can set a values Proc, which is called to return a list of allowed
	values whenever it's queried.
	* Added Config module for determining where we were installed.
	Unfortunately rubygems is a total whore in this regard, and I hope the
	current hackery I have to do to support it becomes redundant in the
	future.

Wed Aug 03 00:31:41 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Added Rakefile, tweaked gemspec

Tue Aug 02 16:27:36 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>

  * Fixed the new http.proxy* settings, they work!
	* Fixed a bug with auth-checking for the config module
	* misc tweaks
