@@ -1,3 +1,7 @@
+Mon Aug 08 23:08:01 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
+
+  * new markov plugin for random inane chat
+
 Sun Aug 07 18:20:24 BST 2005  Tom Gilbert <tom@linuxbrit.co.uk>
 
   * stop insult plugin being used to insult the bot
